trunk/Carbuncle/BaseLanguage/src/grammar/ParserBaseball.java
/* Generated By:JavaCC: Do not edit this line. ParserBaseball.java */
package grammar;

import semantica.ControlloDati;
import semantica.DatiGiocatoreGioco;
import syntaxtree.*;

import java.util.Vector;


public class ParserBaseball implements ParserBaseballConstants {
	static ControlloDati controllo=new ControlloDati();
	static boolean casa = false;
	static int inserimento=2;//lo decremento dopo ogni line up, altrimenti ogni volta che entro in giocatore prova ad inserirmelo in squadra
	static DatiGiocatoreGioco battitoreAttualeCasa;//questi due giocatori mi servono per sapere chi sarà il primo alla battuta nel prox innin
	static DatiGiocatoreGioco battitoreAttualeOspiti;
	static DatiGiocatoreGioco corridoreCasa;
	static DatiGiocatoreGioco corridoreOspiti;
	static int numeroInning=0;
	static boolean attaccoCasa=false;//è true quando la squadra in attacco è quella di casa
	static int numOut=0;
	static int numBattute=0;
	static String tipoLancio=null;
	static String nomeCasa=null;
	static String nomeOspiti=null;
	static int indiceCasa,indiceOspite;
	static Vector<DatiGiocatoreGioco> vectorGiocatoriSulleBasi;
	static Vector<DatiGiocatoreGioco> vectorGiocatoriCasa;//vettore contenente tutti i giocatori di casa con le loro relative statistiche
	static Vector<DatiGiocatoreGioco> vectorGiocatoriOspite;
	static boolean avanzamento;
	static int base;


	static final private void Inizializza(){
		controllo.reset();
		casa=false;
		inserimento=2;
		numeroInning=0;
		attaccoCasa=false;
		numOut=0;
		numBattute=0;
		tipoLancio=null;
		nomeCasa=null;
		nomeOspiti=null;
		battitoreAttualeCasa=null;
		battitoreAttualeOspiti=null;
		indiceCasa=1;//tocca al primo giocatore del lineup casa
		indiceOspite=1;//tocca al primo giocatore del lineup ospiti
		corridoreCasa=null;
		corridoreOspiti=null;
		vectorGiocatoriSulleBasi=new Vector<DatiGiocatoreGioco>();
		vectorGiocatoriSulleBasi.clear();
		vectorGiocatoriCasa=new Vector<DatiGiocatoreGioco>();
		vectorGiocatoriCasa.clear();
		vectorGiocatoriOspite=new Vector<DatiGiocatoreGioco>();
		vectorGiocatoriOspite.clear();
		avanzamento=false;
		base=0;
	}

  static final public S S() throws ParseException {
	  Inizializza();
   SezioneA n0;
   SezioneB n1;
   NodeToken n2;
   Token n3;
   SezioneC n4;
   NodeToken n5;
   Token n6;
    n0 = SezioneA();
    n1 = SezioneB();
    n3 = jj_consume_token(20);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = SezioneC();
    n6 = jj_consume_token(21);
            n5 = JTBToolkit.makeNodeToken(n6);

            if(numeroInning<9){throw new ParseException("Una partita di baseball ha almeno 9 inning!");}

            int puntiCasa=0;
            int PuntiOspiti=0;

            System.out.println("statistiche giocatori di "+nomeCasa);
            System.out.println("size di vectorGiocatoriCasa "+vectorGiocatoriCasa.size());
            for(int i=0;i<vectorGiocatoriCasa.size();i++){
            	String nome=vectorGiocatoriCasa.get(i).getName();
            	int num=vectorGiocatoriCasa.get(i).getOrdine();
            	int k=vectorGiocatoriCasa.get(i).getNumeroK();
            	int valide=vectorGiocatoriCasa.get(i).getNumeroValide();
            	int punti=vectorGiocatoriCasa.get(i).getPuntiSegnati();
            	
            	puntiCasa=puntiCasa+punti;
            	
            	System.out.println(nome+" "+num+", numero K= "+k+", numero valide= "+valide+", numero punti= "+punti);
            }
            System.out.println("statistiche giocatori di "+nomeOspiti);
            System.out.println("size di vectorGiocatoriOspiti "+vectorGiocatoriOspite.size());
            for(int i=0;i<vectorGiocatoriOspite.size();i++){
            	String nome=vectorGiocatoriOspite.get(i).getName();
            	int num=vectorGiocatoriOspite.get(i).getOrdine();
            	int k=vectorGiocatoriOspite.get(i).getNumeroK();
            	int valide=vectorGiocatoriOspite.get(i).getNumeroValide();
            	int punti=vectorGiocatoriOspite.get(i).getPuntiSegnati();
            	
            	PuntiOspiti=PuntiOspiti+punti;
            	
            	System.out.println(nome+" "+num+", numero K= "+k+", numero valide= "+valide+", numero punti= "+punti);
            }

            if(puntiCasa==PuntiOspiti){throw new ParseException("Una partita di baseball non può terminare in pareggio, si deve andare agli extra inning!");}

                 {if (true) return new S(n0,n1,n2,n4,n5);}
                throw new Error("Missing return statement in function");
  }

  static final public SezioneA SezioneA() throws ParseException {
   Squadre n0;
   Arbitro n1;
    n0 = Squadre();
    n1 = Arbitro();
     {if (true) return new SezioneA(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public Squadre Squadre() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   NodeToken n8;
   Token n9;
   NodeToken n10;
   Token n11;
    n1 = jj_consume_token(22);
                          n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(NOME);
               n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(23);
            n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(24);
                        n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(NOME);
               n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(25);
             n10 = JTBToolkit.makeNodeToken(n11);
             try {
            	nomeCasa=n2.tokenImage;
            	nomeOspiti=n8.tokenImage;
            } catch (Exception e) {
            	// TODO: handle exception
            }
            
            controllo.setNomeSquadra(nomeCasa,true);
            controllo.setNomeSquadra(nomeOspiti,false);
            if(nomeCasa.equals(nomeOspiti)){throw new ParseException("Le squadre hanno lo stesso nome!");}
            {if (true) return new Squadre(n0,n2,n4,n6,n8,n10);}
             throw new Error("Missing return statement in function");
  }

  static final public Arbitro Arbitro() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(26);
                   n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(NOME);
               n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(25);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new Arbitro(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public SezioneB SezioneB() throws ParseException {
   ListaLineUp n0;
    n0 = ListaLineUp();
     {if (true) return new SezioneB(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ListaLineUp ListaLineUp() throws ParseException {
	  switch (inserimento) {//se inserimento==2 allora questo è il lineup ospite, altrimenti è quello di casa
	  	case 2:
	  		casa=false;
	  		break;
		case 1:
			casa=true;
			break;
		}
   NodeToken n0;
   Token n1;
   LineUp n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   LineUp n7;
   NodeToken n8;
   Token n9;
    n1 = jj_consume_token(27);
                                  n0 = JTBToolkit.makeNodeToken(n1);
    n2 = LineUp();
    n4 = jj_consume_token(25);
            n3 = JTBToolkit.makeNodeToken(n4);
    n6 = jj_consume_token(28);
                                n5 = JTBToolkit.makeNodeToken(n6);
    n7 = LineUp();
    n9 = jj_consume_token(25);
            n8 = JTBToolkit.makeNodeToken(n9);
     {if (true) return new ListaLineUp(n0,n2,n3,n5,n7,n8);}
    throw new Error("Missing return statement in function");
  }

  static final public LineUp LineUp() throws ParseException {
   Giocatore n0;
   NodeToken n1;
   Token n2;
   Giocatore n3;
   NodeToken n4;
   Token n5;
   Giocatore n6;
   NodeToken n7;
   Token n8;
   Giocatore n9;
   NodeToken n10;
   Token n11;
   Giocatore n12;
   NodeToken n13;
   Token n14;
   Giocatore n15;
   NodeToken n16;
   Token n17;
   Giocatore n18;
   NodeToken n19;
   Token n20;
   Giocatore n21;
   NodeToken n22;
   Token n23;
   Giocatore n24;
    n0 = Giocatore();
    n2 = jj_consume_token(23);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Giocatore();
    n5 = jj_consume_token(23);
            n4 = JTBToolkit.makeNodeToken(n5);
    n6 = Giocatore();
    n8 = jj_consume_token(23);
            n7 = JTBToolkit.makeNodeToken(n8);
    n9 = Giocatore();
    n11 = jj_consume_token(23);
             n10 = JTBToolkit.makeNodeToken(n11);
    n12 = Giocatore();
    n14 = jj_consume_token(23);
             n13 = JTBToolkit.makeNodeToken(n14);
    n15 = Giocatore();
    n17 = jj_consume_token(23);
             n16 = JTBToolkit.makeNodeToken(n17);
    n18 = Giocatore();
    n20 = jj_consume_token(23);
             n19 = JTBToolkit.makeNodeToken(n20);
    n21 = Giocatore();
    n23 = jj_consume_token(23);
             n22 = JTBToolkit.makeNodeToken(n23);
    n24 = Giocatore();
    
    inserimento--;
    
     {if (true) return new LineUp(n0,n1,n3,n4,n6,n7,n9,n10,n12,n13,n15,n16,n18,n19,n21,n22,n24);}
    throw new Error("Missing return statement in function");
  }

  static final public Giocatore Giocatore() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(NOME);
               n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(CIFRA_NON_NULLA);
                          n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(POSIZIONE_DIFESA);
                           n4 = JTBToolkit.makeNodeToken(n5);
                           int num=0;
                           try {
                           	num=Integer.parseInt(n3.image);
                           } catch (Exception e) {
                           // TODO: handle exception
                           }
                                                  	
                           String stringa;
                           if(inserimento==1)stringa=nomeCasa;
                           else stringa=nomeOspiti;

                           DatiGiocatoreGioco giocatoreGioco=null;
                           boolean result,flag=true;

                           switch (inserimento) {
                           case 2:
                           	giocatoreGioco=new DatiGiocatoreGioco(stringa,num,n1.toString(),n5.toString());
                           	result=controllo.addSquadra(giocatoreGioco, false);
                           	if(!result)throw new ParseException("I dati del giocatore "+giocatoreGioco.getNome()+" che si vuole inserire sono in contrasto con gli altri della squadra");
                           	for(int i=0;i<vectorGiocatoriOspite.size();i++){
                           		if(vectorGiocatoriOspite.get(i).getName().equals(giocatoreGioco.getName()))flag=false;
                           	}
                           	if(flag){
                           		vectorGiocatoriOspite.add(giocatoreGioco);
                           	}
                           	if(vectorGiocatoriOspite.size()>9){
                           		for(int i=0; i<vectorGiocatoriOspite.size();i++){
                           			System.out.println(vectorGiocatoriOspite.get(i).getName());
                           		}
                           		throw new ParseException("il vettore vectorGiocatoriOspite è più grande di quanto dovrebbe");
                           	}
                           	break;
                           case 1:
                           	giocatoreGioco=new DatiGiocatoreGioco(stringa,num,n1.toString(),n5.toString());
                           	result=controllo.addSquadra(giocatoreGioco, true);
                           	if(!result)throw new ParseException("I dati del giocatore "+giocatoreGioco.getNome()+" che si vuole inserire sono in contrasto con gli altri della squadra");
                           	for(int i=0;i<vectorGiocatoriCasa.size();i++){
                           		if(vectorGiocatoriCasa.get(i).getName().equals(giocatoreGioco.getName()))flag=false;
                           	}
                           	if(flag){
                           		vectorGiocatoriCasa.add(giocatoreGioco);
                           	}
                           	if(vectorGiocatoriCasa.size()>9){
                           		for(int i=0; i<vectorGiocatoriCasa.size();i++){
                           			System.out.println(vectorGiocatoriCasa.get(i).getName());
                           		}
                           		throw new ParseException("il vettore vectorGiocatoriCasa è più grande di quanto dovrebbe");//questo controllo non serve, ci pensa la grammatica
                           	}
                           	break;
                           case 0:
                           	if(!avanzamento){
                           		if(attaccoCasa){
                           			if(indiceCasa>9)indiceCasa=1;
                           			for(int i=0;i<vectorGiocatoriCasa.size();i++)
                           				if(vectorGiocatoriCasa.get(i).getOrdine()==indiceCasa)
                           					battitoreAttualeCasa=vectorGiocatoriCasa.get(i);
                           			System.out.println("battitoreAttualeCasa: "+battitoreAttualeCasa.getName());
                           			}
                           		else{
                           			if(indiceOspite>9)indiceOspite=1;
                           			for(int i=0;i<vectorGiocatoriOspite.size();i++)
                           				if(vectorGiocatoriOspite.get(i).getOrdine()==indiceOspite)
                           					battitoreAttualeOspiti=vectorGiocatoriOspite.get(i);
                           			System.out.println("battitoreAttualeOspiti: "+battitoreAttualeOspiti.getName());
                           			}
                           	}
                           	else{		
                           		if(attaccoCasa){
                           			for(int i=0;i<vectorGiocatoriCasa.size();i++)
                           				if(vectorGiocatoriCasa.get(i).getOrdine()==num)
                           					corridoreCasa=vectorGiocatoriCasa.get(i);	                           				
                           		}
                           		else{
                           			for(int i=0;i<vectorGiocatoriOspite.size();i++)
                           				if(vectorGiocatoriOspite.get(i).getOrdine()==num)
                           					corridoreOspiti=vectorGiocatoriOspite.get(i);			
                           		}		
                           	}
                           	break;
                           }
     {if (true) return new Giocatore(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public SezioneC SezioneC() throws ParseException {
   NodeList n0 = new NodeList();
   Inning n1;
    label_1:
    while (true) {
      n1 = Inning();
        n0.addNode(n1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
     n0.nodes.trimToSize();
     {if (true) return new SezioneC(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Inning Inning() throws ParseException {
	  numeroInning++;
	  System.out.println("INNING "+numeroInning);
	  for(int i=0;i<vectorGiocatoriCasa.size();i++){
		  vectorGiocatoriCasa.get(i).setBall(0);
		  vectorGiocatoriCasa.get(i).setStrike(0);
		  vectorGiocatoriCasa.get(i).setBaseAttuale(0);
	  }
	  for(int i=0;i<vectorGiocatoriOspite.size();i++){
		  vectorGiocatoriOspite.get(i).setBall(0);
		  vectorGiocatoriOspite.get(i).setStrike(0);
		  vectorGiocatoriOspite.get(i).setBaseAttuale(0);
	  }
   NodeToken n0;
   Token n1;
   Attacco n2;
   NodeToken n3;
   Token n4;
   Attacco n5;
    n1 = jj_consume_token(29);
                                  n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Attacco();
    n4 = jj_consume_token(30);
                                n3 = JTBToolkit.makeNodeToken(n4);
    n5 = Attacco();
     {if (true) return new Inning(n0,n2,n3,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public Attacco Attacco() throws ParseException {
	  numOut=0;
		numBattute=0;
		avanzamento=false;
		vectorGiocatoriSulleBasi.clear();
		controllo.azzeraStrikeBall(vectorGiocatoriCasa);
		controllo.azzeraStrikeBall(vectorGiocatoriOspite);
   NodeList n0 = new NodeList();
   NodeSequence n1;
   NodeToken n2;
   Token n3;
   Battuta n4;
   NodeToken n5;
   Token n6;
    label_2:
    while (true) {
        n1 = new NodeSequence(3);
      n3 = jj_consume_token(31);
               n2 = JTBToolkit.makeNodeToken(n3);
        n1.addNode(n2);
      n4 = Battuta();
        n1.addNode(n4);
      n6 = jj_consume_token(32);
               n5 = JTBToolkit.makeNodeToken(n6);
        n1.addNode(n5);
        n0.addNode(n1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 31:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
    }
     n0.nodes.trimToSize();
     
     if(numBattute<3)throw new ParseException("In ogni attacco ci sono almeno 3 turni di battuta! Errore rilevato nell'inning numero "+numeroInning);
     if(numOut<3)throw new ParseException("Un attacco finisce solo dopo 3 out! Errore rilevato nell'inning numero "+numeroInning);

     if(attaccoCasa)attaccoCasa=false;
     else attaccoCasa=true;
     
     {if (true) return new Attacco(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Battuta Battuta() throws ParseException {
	  numBattute++;
   NodeList n0 = new NodeList();
   Lancio n1;
    label_3:
    while (true) {
      n1 = Lancio();
        n0.addNode(n1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOME:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
    }
     n0.nodes.trimToSize();
     
     if(attaccoCasa){
    		indiceCasa++;
    		if(battitoreAttualeCasa.getBaseAttuale()==0&&battitoreAttualeCasa.getNumeroBall()<4&&battitoreAttualeCasa.getNumeroStrike()<3&&!battitoreAttualeCasa.getPallaBattuta())throw new ParseException("Il turno di battuta del giocatore "+battitoreAttualeCasa.getName()+" nell'inning numero "+numeroInning+" non è ancora finito! palla battuta: "+battitoreAttualeCasa.getPallaBattuta());
    		if(battitoreAttualeCasa.getNumeroBall()>4)throw new ParseException("Il giocatore "+battitoreAttualeCasa.getName()+" non può trovarsi ancora alla battuta visto che ha "+battitoreAttualeCasa.getNumeroBall()+" ball dovrebbe essere in prima base, poblema rilevato nell'inning "+numeroInning);
    		if(battitoreAttualeCasa.getNumeroStrike()>3)throw new ParseException("Il giocatore "+battitoreAttualeCasa.getName()+" non può trovarsi ancora alla battuta visto che ha "+battitoreAttualeCasa.getNumeroStrike()+" strike dovrebbe essere out, poblema rilevato nell'inning "+numeroInning);
    		}
    	else{
    		indiceOspite++;
    	   	if(battitoreAttualeOspiti.getBaseAttuale()==0&&battitoreAttualeOspiti.getNumeroBall()<4&&battitoreAttualeOspiti.getNumeroStrike()<3&&!battitoreAttualeOspiti.getPallaBattuta())throw new ParseException("Il turno di battuta del giocatore "+battitoreAttualeOspiti.getName()+" nell'inning numero "+numeroInning+" non è ancora finito! palla battuta: "+battitoreAttualeOspiti.getPallaBattuta());
    		if(battitoreAttualeOspiti.getNumeroBall()>4)throw new ParseException("Il giocatore "+battitoreAttualeOspiti.getName()+" non può trovarsi ancora alla battuta visto che ha "+battitoreAttualeOspiti.getNumeroBall()+" ball dovrebbe essere in prima base, poblema rilevato nell'inning "+numeroInning);
    		if(battitoreAttualeOspiti.getNumeroStrike()>3)throw new ParseException("Il giocatore "+battitoreAttualeOspiti.getName()+" non può trovarsi ancora alla battuta visto che ha "+battitoreAttualeOspiti.getNumeroStrike()+" strike dovrebbe essere out, poblema rilevato nell'inning "+numeroInning);
    		}
     
     {if (true) return new Battuta(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Lancio Lancio() throws ParseException {
	  avanzamento=false;
   Giocatore n0;
   NodeToken n1;
   Token n2;
   EffettoBattuta n3;
   NodeToken n4;
   Token n5;
    n0 = Giocatore();
    n2 = jj_consume_token(23);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = EffettoBattuta();
    n5 = jj_consume_token(25);
            n4 = JTBToolkit.makeNodeToken(n5);
            
            DatiGiocatoreGioco giocatore=null;
            String nome="";
            int num=0;
            String pos="";
            try {
            	nome=n0.f0.tokenImage;
                num=Integer.parseInt(n0.f1.tokenImage);
                pos=n0.f2.tokenImage;
            } catch (Exception e) {
            	// TODO: handle exception
            }

            if(!controllo.controlloNumeroGiocBase(vectorGiocatoriSulleBasi))throw new ParseException("Ci sono più di 3 giocatori sulle basi, problema rilevato nell'inning "+numeroInning);
            if(!controllo.controlloConsistenzaGiocBase(vectorGiocatoriSulleBasi))throw new ParseException("Ci sono più giocatori che condividono la stessa base, problema rilevato nell'inning "+numeroInning);


            giocatore=null;


            if(attaccoCasa){
            	for(int i=0;i<vectorGiocatoriCasa.size();i++){
            		if(vectorGiocatoriCasa.get(i).getName().equals(nome)&&vectorGiocatoriCasa.get(i).getPosizione().equals(pos)&&vectorGiocatoriCasa.get(i).getOrdine()==num)
            			giocatore=vectorGiocatoriCasa.get(i);
            	}
            	if(giocatore==null) throw new ParseException("I dati del giocatore non corrispondono a nessuno dei giocatori in squadra, problema nell'inning "+numeroInning);
            	if(battitoreAttualeCasa.getOrdine()!=giocatore.getOrdine()||!battitoreAttualeCasa.getName().equals(giocatore.getName())||!battitoreAttualeCasa.getPosizione().equals(giocatore.getPosizione()))			
            		throw new ParseException("L'ordine del lineup non è rispettato nell'attacco della squadra di casa! Nell'inning numero "+numeroInning+" tocca al giocatore "+battitoreAttualeCasa.getName()+" "+battitoreAttualeCasa.getOrdine()+", non al giocatore "+giocatore.getNome()+" "+giocatore.getOrdine()+".");
            	}
            else{
            	for(int i=0;i<vectorGiocatoriOspite.size();i++){
            		if(vectorGiocatoriOspite.get(i).getName().equals(nome)&&vectorGiocatoriOspite.get(i).getPosizione().equals(pos)&&vectorGiocatoriOspite.get(i).getOrdine()==num)
            			giocatore=vectorGiocatoriOspite.get(i);
            		}
            	if(giocatore==null) throw new ParseException("I dati del giocatore non corrispondono a nessuno dei giocatori in squadra, problema nell'inning "+numeroInning);
            	if(battitoreAttualeOspiti.getOrdine()!=giocatore.getOrdine()||!battitoreAttualeOspiti.getName().equals(giocatore.getName())||!battitoreAttualeOspiti.getPosizione().equals(giocatore.getPosizione()))
            		throw new ParseException("L'ordine del lineup non è rispettato nell'attacco della squadra di casa! Nell'inning numero "+numeroInning+" tocca al giocatore "+battitoreAttualeOspiti.getName()+" "+battitoreAttualeOspiti.getOrdine()+", non al giocatore "+giocatore.getNome()+" "+giocatore.getOrdine()+".");
            	}

            /////////////////////////
            /*CONTROLLO CHE NON CI SIA UN SUPERAMENTO SULLE BASI*/
            int bas;
            int ordine;
            String nom;
            for(int i=0;i<vectorGiocatoriSulleBasi.size();i++){
            	System.out.println(vectorGiocatoriSulleBasi.get(i).getName()+", base: "+vectorGiocatoriSulleBasi.get(i).getBaseAttuale());
            	bas=vectorGiocatoriSulleBasi.get(i).getBaseAttuale();
            	ordine=vectorGiocatoriSulleBasi.get(i).getOrdine();
            	nom=vectorGiocatoriSulleBasi.get(i).getName();
            	for(int j=i+1;j<vectorGiocatoriSulleBasi.size();j++){
            		if(bas<vectorGiocatoriSulleBasi.get(j).getBaseAttuale()){
            			System.out.println("problema con "+nom+" e "+vectorGiocatoriSulleBasi.get(j).getName()+" aventi rispettivamente base "+bas+" e "+vectorGiocatoriSulleBasi.get(j).getBaseAttuale());
            			throw new ParseException("C'è stato un superamento sulle basi: il giocatore "+vectorGiocatoriSulleBasi.get(j).getName()+" ha superato il giocatore "+nom+" nell'inning "+numeroInning);
            		}
            	}
            }
            /////////////////////////

     {if (true) return new Lancio(n0,n1,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public EffettoBattuta EffettoBattuta() throws ParseException {
   NodeChoice n0;
   PallaBattuta n1;
   PallaNonBattuta n2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BASE:
    case K:
    case OUT_VOLO:
    case OUT_RUBATA:
    case BASE_SU_BALL:
    case INTERFERENZA:
    case BASE_RUBATA:
    case COLPITO:
    case ERRORE:
    case CIFRA_NON_NULLA:
      n1 = PallaBattuta();
        n0 = new NodeChoice(n1, 0);
      break;
    case TIPO_LANCIO:
      n2 = PallaNonBattuta();
        n0 = new NodeChoice(n2, 1);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new EffettoBattuta(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public PallaBattuta PallaBattuta() throws ParseException {
		 if(attaccoCasa){
			 battitoreAttualeCasa.setPallaBattuta(true);
			 battitoreAttualeCasa.incApparizioniAlPiatto();///////////////////////////
			 }
		 else {
			 battitoreAttualeOspiti.setPallaBattuta(true);
			 battitoreAttualeOspiti.incApparizioniAlPiatto();/////////////////////////////
		 }
   Esito n0;
   NodeListOptional n1 = new NodeListOptional();
   Avanzamento n2;
    n0 = Esito();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOME:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      n2 = Avanzamento();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new PallaBattuta(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public PallaNonBattuta PallaNonBattuta() throws ParseException {
		 if(attaccoCasa){
			 battitoreAttualeCasa.setPallaBattuta(false);
			 battitoreAttualeCasa.incApparizioniAlPiatto();///////////////////////////ad ogni lancio lo incremento, poi se è un BB o un colpito lo decremento
			 }
		 else{
			 battitoreAttualeOspiti.setPallaBattuta(false);
			 battitoreAttualeOspiti.incApparizioniAlPiatto();///////////////////////////ad ogni lancio lo incremento, poi se è un BB o un colpito lo decremento
			 }
   NodeToken n0;
   Token n1;
   NodeOptional n2 = new NodeOptional();
   Esito n3;
   NodeListOptional n4 = new NodeListOptional();
   Avanzamento n5;
    n1 = jj_consume_token(TIPO_LANCIO);
                      n0 = JTBToolkit.makeNodeToken(n1);
                      
                      try {
                    	   	tipoLancio=n0.tokenImage;
                    	} catch (Exception e) {
                    	   // TODO: handle exception
                    	}
                    	if(tipoLancio.equals("BALL")){
                    		if(attaccoCasa)
                    			battitoreAttualeCasa.incNumeroBall();
                    		else
                    			battitoreAttualeOspiti.incNumeroBall();	
                    	}
                    	else{
                    		if(tipoLancio.equals("STRIKE")){
                    			if(attaccoCasa)
                    				battitoreAttualeCasa.incNumeroStrike();			
                    			else
                    				battitoreAttualeOspiti.incNumeroStrike();
                    			}
                    		else{
                    			if(tipoLancio.equals("FOUL BALL")){
                    				System.out.println("FOUL BALL");
                    				if(attaccoCasa){
                    					if(battitoreAttualeCasa.getNumeroStrike()<2){
                    						battitoreAttualeCasa.incNumeroStrike();
                    						}
                    					}		
                    				else{
                    					if(battitoreAttualeOspiti.getNumeroStrike()<2){
                    						battitoreAttualeOspiti.incNumeroStrike();
                    						}
                    					}			
                    			}
                    		}			
                    	}

                    	if(attaccoCasa){
                    		System.out.println(battitoreAttualeCasa.getName()+" num Strike: "+battitoreAttualeCasa.getNumeroStrike()+" num Ball: "+battitoreAttualeCasa.getNumeroBall());
                    	}
                    	else {
                    		System.out.println(battitoreAttualeOspiti.getName()+" num Strike: "+battitoreAttualeOspiti.getNumeroStrike()+" num Ball: "+battitoreAttualeOspiti.getNumeroBall());
                    	}

    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BASE:
    case K:
    case OUT_VOLO:
    case OUT_RUBATA:
    case BASE_SU_BALL:
    case INTERFERENZA:
    case BASE_RUBATA:
    case COLPITO:
    case ERRORE:
